@@ -9,6 +9,7 @@ SubVersion: $Id$
 	- [kevin] $2081: removed excess spaces in disassemblers
 	- [kevin] $2090: added --disable-gdb configure option
 	- [roms]  $2096: fixed bug #1490859 (enable OK button when selecting an image)
+	- [roms]  $2097: fixed bug #1471709 (crash on old state image)
 
 - 25/08/2005, version 2.80:
 	- [roms] $1689: fixed Titanium skin loading and fixed bug in skin loader
